# ticktick-to-ical

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  ticktick_to_ical.py
.github/workflows/: ci.yml
tests/: test_ticktick_to_ical.py
tests/fixtures/: sample.csv
