[project]
name = "ticktick-to-ical"
version = "0.1.0"
description = "Convert TickTick CSV exports to iCalendar (.ics) files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "icalendar==7.0.3",
]

[project.scripts]
ticktick-to-ical = "ticktick_to_ical:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
